--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,5 +19,9 @@
         android:text="视频播放" />
 
 
-
+    <Button
+        android:id="@+id/btn_pai"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="视频拍摄" />
 </LinearLayout>
